<resources>
    <string name="app_name">Android Lanjutan</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="record_sound">Record Sound</string>
    <string name="tts">Text to Speech</string>
    <string name="stt">Speech to Text</string>
    <string name="camera">Camera</string>
    <string name="subject">Subject</string>
    <string name="send_to">Send To</string>
    <string name="pesan">Message</string>
    <string name="btn_send">Send</string>
    <string name="subject_kosong">Subject tidak boleh kosong</string>
    <string name="email_tujuan_kosong">Email tujuan tidak boleh kosong</string>
    <string name="intent_send">Send Intent</string>
    <string name="pilih_nomor">Pilih nomor tujuan</string>
    <string name="masukkan_pesan">Masukkan pesan</string>
    <string name="pilih_aplikasi">Pilih Aplikasi</string>
    <string name="mengirim">Mengirim pesan</string>
    <string name="gagal_mengirim">Gagal mengirim pesan</string>
    <string name="play">Play</string>
    <string name="record">Record</string>
    <string name="stop_record">Stop Record</string>
    <string name="stop_play">Stop Play</string>
    <string name="htts">Type text</string>
    <string name="saytts">Speak</string>
    <string name="lang_not_found">Bahasa tidak ditemukan</string>
    <string name="tts_error">Initialize error</string>
    <string name="hstt">Speech result</string>
    <string name="writestt">Proccess Speech</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="share">Share Image</string>
    <string name="camera_error">Camera Error</string>
    <string name="dir_error">Failde to make directory folder</string>
</resources>
