<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record" />

    <Button
        android:id="@+id/btnRstop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_record" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play" />

    <Button
        android:id="@+id/btnSplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_play" />
</LinearLayout>