<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmailActivity">
    <EditText
        android:id="@+id/edSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:inputType="textEmailSubject" />
    <EditText
        android:id="@+id/edSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_to"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/edPesanMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pesan"
        android:inputType="textMultiLine"
        android:lines="4"/>
    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"/>
</LinearLayout>