<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SmsActivity">

    <EditText
        android:id="@+id/edSmsTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_to"
        android:inputType="number" />

    <EditText
        android:id="@+id/edSmsPesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pesan"
        android:inputType="textMultiLine"
        android:lines="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSmsIntent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/intent_send" />

        <Button
            android:id="@+id/btnSmsKirim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_send" />
    </LinearLayout>
</LinearLayout>